--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,12 +16,12 @@
             color: #02bebe !important;
         }
 
-        .logo{
+        .logo {
             height: 50px;
             width: 100px;
         }
 
-        .search{
+        .search {
             width: 70%;
         }
 
@@ -31,11 +31,12 @@
     <div class="container-fluid">
         <a href="/"> <img alt="logo" src="/media/details/logo.svg" class="logo"></a>
 
-{#        <a class="navbar-brand" href="/">Inventory</a>#}
+        {#        <a class="navbar-brand" href="/">Inventory</a>#}
 
         {% if searchform %}
             <form class="form-inline search">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search 🔎" aria-label="Search" name="search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search 🔎" aria-label="Search"
+                       name="search">
 
             </form>
         {% endif %}
@@ -79,7 +80,7 @@
                             Add Category
                         </a>
                     </li>
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link " href="{% url 'project-details' %}">
                             Project Details
                         </a>
@@ -94,3 +95,22 @@
         </div>
     </div>
 </nav>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+    function addDarkmodeWidget() {
+        const options = {
+            right: '18px',
+            bottom: '32px', // default: '32px'
+
+            mixColor: '#fff', // default: '#fff'
+            backgroundColor: '#fff',  // default: '#fff'
+            buttonColorDark: '#000',  // default: '#100f2c'
+            buttonColorLight: 'cyan', // default: '#fff'
+            label: '🌙', // default: ''
+            autoMatchOsTheme: false // default: true
+        }
+        new Darkmode(options).showWidget();
+    }
+
+    window.addEventListener('load', addDarkmodeWidget);
+</script>
